[package]
name = "packwirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["env", "derive"]}
inquire = "0.6.2"
serde = {version = "1.0.163", features = ["derive"]}
toml = "0.7.5"

