[package]
name = "packwirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["env", "derive"]}
inquire = "0.6.2"
reqwest = { version =  "0.11.18", features = ["blocking", "json"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.99"
toml = "0.7.5"
xmltojson = "0.1.3"

